@@ -5,8 +5,11 @@ COPY conf conf
 COPY pom.xml pom.xml
 RUN mvn package -q
 
-FROM openjdk:12
+FROM openjdk:11.0.3-jdk-slim
 WORKDIR /redkale
 COPY conf conf
-COPY --from=maven /redkale/target/redkale-benchmark-0.0.1.jar redkale-benchmark.jar
-CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-DAPP_HOME=./", "-jar", "redkale-benchmark.jar"]
+COPY --from=maven /redkale/target/redkale-benchmark-1.0.0.jar redkale-benchmark.jar
+
+EXPOSE 8080
+
+CMD ["java", "-DAPP_HOME=./", "-jar", "redkale-benchmark.jar"]
